Feat (front) Add og tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO Tags-->
     <title>Développeur web à Nice - Nathan Bonin</title>
-    <meta name="description" content="Mon portfolio. Je créée et développe des solutions sur-mesure pour faire des internautes vos clients">
-    <meta name="robots" content="index, follow">
+    <meta name="description" content="Mon portfolio. Je créée et développe des solutions sur-mesure pour faire des internautes vos clients" />
+    <meta name="robots" content="index, follow" />
+    <!--OG Tags-->
+    <meta property="og:title" content="Nathan, développeur web à Nice" />
+    <meta property="og:image" content="./images/apercu-og.webp" />
+    <meta property="og:description" content="Je créée et développe des solutions sur-mesure pour faire des internautes vos clients" />
+    <meta property="og:site_name" content="Nathan Bonin" />
+    <meta property="og:type" content="website" />
     <!--Loading fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +26,7 @@
     <link href="./style/main.css" rel="stylesheet" />
     <link href="./style/footer.css" rel="stylesheet" />  
     <!--Favicon-->  
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="./logo/favicon.svg">
 </head>
 <body>
     <header>
